<resources>
    <string name="app_name">ImTaxi</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="text_user_name">Username</string>
    <string name="text_password">Password</string>
    <string name="text_cab_request">Cab Request Form</string>
    <string name="text_employee">Employee</string>
    <string name="text_manager">Manager</string>
    <string name="text_manager_name">Manager Name</string>
    <string name="text_cab_required">Time Cab Required</string>
    <string name="text_guard">Guard</string>

    <string name="text_name">Employee Name</string>
    <string name="text_contact">Employee Contact</string>
    <string name="text_id">Employee ID</string>
    <string name="text_prject_code">Project BP Code</string>
    <string name="text_purpose_travel">Purpose of Travel</string>
    <string name="text_destination">Destination</string>
    <string name="text_submit">Submit</string>
    <string name="text_complete">Completed</string>
    <string name="text_pending">Pending</string>

    <string name="text_login">Login</string>
    <string name="text_trip_details">Trip Details</string>
    <string name="text_approved_by">Approved by</string>
    <string name="text_Date">Date</string>
    <string name="text_requested_by">Requested by</string>

    <string name="text_car_name">CarModel</string>
    <string name="text_car_num">CarNumber</string>
    <string name="text_driver_name">Driver Name</string>
    <string name="text_time">Time</string>
    <string name="text_car_details">Car Details</string>
    <string name="text_approve">Approve</string>
    <string name="text_reject">Reject</string>

    <string name="text_cancel">Cancel</string>
    <string name="text_ok">Ok</string>
    <string name="text_are_u_sure">Are you Sure?</string>
    <string name="text_approve_request">You are about to approve this request.</string>

</resources>
