<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_medium_xx"
    android:layout_marginRight="@dimen/margin_medium_xx"
    android:layout_marginTop="@dimen/margin_medium_xx"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium_xx">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="Source"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:maxLines="2"
                    android:padding="@dimen/margin_medium_xx"
                    android:text="Destination"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_small" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_xx"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/approved_by"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="@string/text_approved_by"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_small_x" />

                    <TextView
                        android:id="@+id/manager_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="Mr. Manager"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_small" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/requested_by"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="@string/text_requested_by"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_small_x" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="Mr. Employee"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_small" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="@string/text_Date"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_small_x" />

                    <TextView

                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="19 Jan 2014,12:44am"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_small" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/margin_small_x">

            <View
                android:id="@+id/line_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_small_x"
                android:layout_gravity="bottom"
                android:background="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/holo_green_dark"
                android:padding="@dimen/margin_small"
                android:text="Pending"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small_x" />

        </FrameLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>